--- a/app/blocks/slogan/slogan.scss
+++ b/app/blocks/slogan/slogan.scss
@@ -7,11 +7,12 @@
   line-height: (26/13);
   letter-spacing: .2em;
   color: $color-landing-subtitles;
+  text-transform: uppercase;
 
   @include screen('sm') {
     @include text10;
 
-    line-height: (26/10);
+    line-height: (20/10);
     letter-spacing: .2em;
   }
 }
