--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -27,6 +27,7 @@ include ../blocks/dots/dots
 include ../blocks/dropdown/dropdown
 include ../blocks/facility/facility
 include ../blocks/factor/factor
+include ../blocks/feature/feature
 include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
