--- a/app/pages/about-tenant/about-tenant.pug
+++ b/app/pages/about-tenant/about-tenant.pug
@@ -4,6 +4,40 @@ block head
   - var pageTitle = 'SpacePool - About Space Pool for Guests'
 
 block content
+  +content-origin._reverse._landing
+    +promo-section
+      .container
+        +promo-section-content
+          +promo-section-column._left._white._left_wide
+            +breadcrumbs(['Home', 'About', 'About Space Pool for Guests']).__breadcrumbs
+            +logo-image-short('div')._short.__logo
+            +promo-section-title() Spacepool for <br> Guests
+            +promo-section-text Based in London, Spacepool is a flexible workspace marketplace that connects businesses with a variety of offices and workspaces from which to operate, including the large number of local independent operators. Whether you’re a start-up, scale-up or established organisation, we have the solution for you.
+            +e.buttons
+              +button('a')(href="#")._border._border_bg-white._short._border_dark.__button Sign Up for newsletter
+          +promo-section-column._right._media
+            +promo-section-media('assets/images/about-lead2.jpg')
+    +promo-section
+      .container
+        +promo-section-header
+          +promo-section-column._left._media
+          +promo-section-column._right
+            +slogan.__slogan READY, STEADY, GO!
+            +promo-section-title How Does it Work?
+        +promo-section-content
+          +promo-section-column._left._media(data-slot-id="suggestion" data-slot-res="xl")
+            +promo-section-media('assets/images/about-lead4.jpg')._mask._content
+              +e.description
+                +promo-section-text._big2._bold In modern world everything becomes faster, more convenient and common. Space pool is breathing within the pulse of the generation bringing the simplicity and tangible advantages to the office rental industry.
+            +e.suggestion(data-target-slot="suggestion")
+              +promo-section-text._small._mg64 Waiting for the sign to change your ordinary workspace to something completely different. new and inspiring? Here it is!
+              +e.buttons
+                +button('a')(href="#")._border._border_dark._short.__button Sign Up for newsletter
+          +promo-section-column._right._white
+            +feature('assets/images/picture-search.svg', 'Search', '_search') Search online for the workspace you need. We understand your priorities, and our extensive filter tool lets you narrow your search by price, availability, location, type of workspace - and more! With photos and detailed listing information, we tailor your results to help you make a decision that suits you.
+            +feature('assets/images/picture-pointer.svg', 'Hire', '_pointer') Once you’ve found your ideal workspace, submit your hire request. We’re confident you’ll be able to make a quick and easy decision, but if you want more details or would like to visit the workplace, our online messaging service lets you contact your Host to make the necessary arrangements. Remember to review the house rules and our terms and conditions.
+            +feature('assets/images/picture-plant.svg', 'Move in', '_plant') Once your hire request has been accepted, you can move in! To keep things easy, you make your payment through our website. We accept all the usual forms of online payment, allowing you to use credit or debit cards, or even set up Direct Debit payments.
+          +promo-section-column._left._sug.hide-from-md(data-slot-id="suggestion" data-slot-res="md")
 
 
 block panels
