--- a/app/blocks/promo-section/promo-section.pug
+++ b/app/blocks/promo-section/promo-section.pug
@@ -6,10 +6,23 @@ mixin promo-section-header()
   +e.header&attributes(attributes)
     block
 
-mixin promo-section-title()
-  +e.title&attributes(attributes)
+mixin promo-section-title(tag)
+  +e(tag || 'h2').title&attributes(attributes)
     block
 
 mixin promo-section-content()
   +e.content&attributes(attributes)
+    block
+
+mixin promo-section-column()
+  +e.column&attributes(attributes)
+    block
+
+mixin promo-section-media(img)
+  +e.media&attributes(attributes)
+    +e.IMG.image(src=img)
+    block
+
+mixin promo-section-text()
+  +e.text&attributes(attributes)
     block
