--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -229,4 +229,23 @@
       display: block;
     }
   }
+
+  &_landing {
+    padding-top: 56px;
+    padding-bottom: 140px;
+
+    @include screen('lg') {
+      padding-top: 50px;
+    }
+
+    @include screen('md') {
+      padding-top: 0;
+      padding-bottom: 90px;
+      border-top: 1px solid $color-border-light;
+    }
+
+    @include screen('sm') {
+      padding-bottom: 63px;
+    }
+  }
 }
