--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -47,6 +47,7 @@ include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
 include ../blocks/info-price/info-price
+include ../blocks/info-slide/info-slide
 include ../blocks/info/info
 include ../blocks/link/link
 include ../blocks/lists/lists
