--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -59,6 +59,18 @@ mixin slider-calendar(buttons)
         +e.button._next.js-slider-button-next
           +icon('arrow2').__button-icon
 
+mixin slider-promo()
+  +b.slider__._promo&attributes(attributes)
+    +e.container.swiper-container.js-slider-container
+      .swiper-wrapper
+        block
+      +e.buttons
+        +e.button._prev.js-slider-button-prev
+          +icon('slider-arrow').__button-icon
+        +e.UL.dots(data-slider-dots)
+        +e.button._next.js-slider-button-next
+          +icon('slider-arrow').__button-icon
+
 mixin slide
   +e.slide.swiper-slide&attributes(attributes)
     block
