about pages animation

--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -29,8 +29,8 @@
     display: inline-block;
     position: relative;
     transition: background-color $ease-main;
-    pointer-events: all;
-    cursor: pointer;
+    pointer-events: none;
+    cursor: default;
     background-color: $color-black;
 
     @include screen('sm') {
