--- a/app/blocks/info-slide/info-slide.scss
+++ b/app/blocks/info-slide/info-slide.scss
@@ -48,6 +48,12 @@
       align-items: center;
       flex: 1;
       z-index: 2;
+      transition: transform .5s ease-in;
+      transform: translate3d(40px, 0, 0);
+
+      .swiper-slide-active & {
+        transform: translate3d(0, 0, 0);
+      }
 
       @include screen('md') {
         margin-top: 0;
