--- a/app/blocks/promo-section/promo-section.scss
+++ b/app/blocks/promo-section/promo-section.scss
@@ -235,6 +235,7 @@
 
       &#{$b}__column_media {
         padding: 0;
+        z-index: 2;
 
         @include screen('lg') {
           left: -40px;
@@ -281,6 +282,7 @@
           width: 57%;
           margin-left: -14%;
           padding: 0;
+          z-index: 2;
 
           @include screen('lg') {
             right: -40px;
