--- a/app/layouts/default-special.pug
+++ b/app/layouts/default-special.pug
@@ -19,9 +19,9 @@ html(lang='en')
 
     +overlay
     +user-menu-panel
-    +cookies
+    +cookies.js-sr_opacity
     block panels
-    +footer-special
+    +footer-special.js-sr_bottom
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
