--- a/app/pages/about-tenant/about-tenant.pug
+++ b/app/pages/about-tenant/about-tenant.pug
@@ -8,27 +8,27 @@ block content
     +promo-section
       .container
         +promo-section-content
-          +promo-section-column._left._white._left_wide
-            +breadcrumbs(['Home', 'About', 'About Space Pool for Guests']).__breadcrumbs
-            +logo-image-short('div')._short.__logo
-            +promo-section-title() Spacepool for <br> Guests
-            +promo-section-text Based in London, Spacepool is a flexible workspace marketplace that connects businesses with a variety of offices and workspaces from which to operate, including the large number of local independent operators. Whether you’re a start-up, scale-up or established organisation, we have the solution for you.
-            +e.buttons
+          +promo-section-column._left._white._left_wide.js-sr_opacity
+            +breadcrumbs(['Home', 'About', 'About Space Pool for Guests']).__breadcrumbs.js-sr_bottom
+            +logo-image-short('div')._short.__logo.js-sr_bottom
+            +promo-section-title().js-sr_bottom Spacepool for <br> Guests
+            +promo-section-text.js-sr_bottom Based in London, Spacepool is a flexible workspace marketplace that connects businesses with a variety of offices and workspaces from which to operate, including the large number of local independent operators. Whether you’re a start-up, scale-up or established organisation, we have the solution for you.
+            +e.buttons.js-sr_bottom
               +button('a')(href="#")._border._border_bg-white._short._border_dark.__button Sign Up for newsletter
-          +promo-section-column._right._media
+          +promo-section-column._right._media.js-sr_right
             +promo-section-media('assets/images/about-lead2.jpg')
     +promo-section._mg112
       .container
         +promo-section-content
-          +promo-section-column._left._left_picture(data-slot-id="illustration" data-slot-res="xl")
+          +promo-section-column._left._left_picture.js-sr_left(data-slot-id="illustration" data-slot-res="xl")
             +e.illustration_w109p-right._corr-pb(data-target-slot="illustration")
               +e.IMG.picture(src="assets/images/illustration-3.svg")
-          +promo-section-column._right._right_short
-            +e.top
+          +promo-section-column._right._right_short.js-sr_bottom
+            +e.top.js-sr_bottom
               +slogan.__slogan_mg35 ASSURANCE
               +promo-section-text._big._bold Transparency is our watchword. We aggregate all the workspaces listed by our Hosts so that our members can choose the right space to suit them, regardless of your capacity or period of occupation.
-            +e.middle.hide-from-md(data-slot-id="illustration" data-slot-res="md")
-            +e.bottom
+            +e.middle.hide-from-md.js-sr_right(data-slot-id="illustration" data-slot-res="md")
+            +e.bottom.js-sr_bottom
               +promo-section-text._small
                 p
                   b As a Spacepool member, you will have access to a dynamic network that allows you to grow and develop your business, while always geared towards practicality and peace of mind. We provide you with all the information you need to compare your options and make the most educated and confident choice when looking to hire.
@@ -37,11 +37,11 @@ block content
 
     +promo-section._mg142
       .container
-        +promo-section-header._mg78
+        +promo-section-header._mg78.js-sr_top
           +promo-section-column._full
             +slogan.__slogan_pl Take control of your search
             +promo-section-title._pl Why hire with Spacepool?
-        +promo-section-content
+        +promo-section-content.js-sr_bottom
           - var slider = getData('promo-slider-guest.json');
           +slider-promo.js-slider-promo
             each item in slider
@@ -57,25 +57,25 @@ block content
                       +e.IMG.image(src=item.img class=imgClass)
     +promo-section
       .container
-        +promo-section-header
+        +promo-section-header.js-sr_top
           +promo-section-column._left._media
           +promo-section-column._right
             +slogan.__slogan READY, STEADY, GO!
             +promo-section-title How Does it Work?
         +promo-section-content
-          +promo-section-column._left._media(data-slot-id="suggestion" data-slot-res="xl")
+          +promo-section-column._left._media.js-sr_left(data-slot-id="suggestion" data-slot-res="xl")
             +promo-section-media('assets/images/about-lead4.jpg')._mask._content
               +e.description
                 +promo-section-text._big2._bold In modern world everything becomes faster, more convenient and common. Space pool is breathing within the pulse of the generation bringing the simplicity and tangible advantages to the office rental industry.
-            +e.suggestion(data-target-slot="suggestion")
+            +e.suggestion.js-sr_bottom(data-target-slot="suggestion")
               +promo-section-text._small._mg64 Waiting for the sign to change your ordinary workspace to something completely different. new and inspiring? Here it is!
               +e.buttons
                 +button('a')(href="#")._border._border_dark._short.__button Sign Up for newsletter
-          +promo-section-column._right._white
-            +feature('assets/images/picture-search.svg', 'Search', '_search') Search online for the workspace you need. We understand your priorities, and our extensive filter tool lets you narrow your search by price, availability, location, type of workspace - and more! With photos and detailed listing information, we tailor your results to help you make a decision that suits you.
-            +feature('assets/images/picture-pointer.svg', 'Hire', '_pointer') Once you’ve found your ideal workspace, submit your hire request. We’re confident you’ll be able to make a quick and easy decision, but if you want more details or would like to visit the workplace, our online messaging service lets you contact your Host to make the necessary arrangements. Remember to review the house rules and our terms and conditions.
-            +feature('assets/images/picture-plant.svg', 'Move in', '_plant') Once your hire request has been accepted, you can move in! To keep things easy, you make your payment through our website. We accept all the usual forms of online payment, allowing you to use credit or debit cards, or even set up Direct Debit payments.
-          +promo-section-column._left._sug.hide-from-md(data-slot-id="suggestion" data-slot-res="md")
+          +promo-section-column._right._white.js-sr_opacity
+            +feature('assets/images/picture-search.svg', 'Search', '_search').js-sr_bottom Search online for the workspace you need. We understand your priorities, and our extensive filter tool lets you narrow your search by price, availability, location, type of workspace - and more! With photos and detailed listing information, we tailor your results to help you make a decision that suits you.
+            +feature('assets/images/picture-pointer.svg', 'Hire', '_pointer').js-sr_bottom Once you’ve found your ideal workspace, submit your hire request. We’re confident you’ll be able to make a quick and easy decision, but if you want more details or would like to visit the workplace, our online messaging service lets you contact your Host to make the necessary arrangements. Remember to review the house rules and our terms and conditions.
+            +feature('assets/images/picture-plant.svg', 'Move in', '_plant').js-sr_bottom Once your hire request has been accepted, you can move in! To keep things easy, you make your payment through our website. We accept all the usual forms of online payment, allowing you to use credit or debit cards, or even set up Direct Debit payments.
+          +promo-section-column._left._sug.hide-from-md.js-sr_bottom(data-slot-id="suggestion" data-slot-res="md")
 
 
 block panels
