--- a/app/blocks/info-slide/info-slide.scss
+++ b/app/blocks/info-slide/info-slide.scss
@@ -51,6 +51,10 @@
       transition: transform .5s ease-in;
       transform: translate3d(40px, 0, 0);
 
+      @include screen('md') {
+        transform: translate3d(0, 40px, 0);
+      }
+
       .swiper-slide-active & {
         transform: translate3d(0, 0, 0);
       }
